# 2d-game-engine

./: .gitignore  CMakeLists.txt
helper/: build.sh
src/: CBoundingBox.cpp  CBoundingBox.h  CCollision.h  CInput.h  CShape.cpp  CShape.h  CTransform.cpp  CTransform.h  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  Scene_Play.cpp  Scene_Play.h  Scene_Splash.cpp  Scene_Splash.h  Vec2.cpp  Vec2.h  main.cpp
